adjusting size of plots and fonts

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -557,7 +557,7 @@ annotated_sampling_dist_20 <- sampling_distribution_20 +
     hjust = 1, 
     vjust = 1,
     label = paste("mean = ", round(mean(sample_estimates$sample_mean), 1))
-  )
+  )+  theme(text = element_text(size = 12), axis.title=element_text(size=12)) 
 #+
 #    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_20), hjust = 1, vjust = 3,
 #               label = paste("sd = ", round(sd(sample_estimates$sample_mean), 1)))
@@ -571,7 +571,7 @@ annotated_sampling_dist_50 <- sampling_distribution_50 +
     hjust = 1, 
     vjust = 1,
     label = paste("mean = ", round(mean(sample_estimates_50$sample_mean), 1))
-  ) #+
+  )+  theme(text = element_text(size = 12), axis.title=element_text(size=12))  #+
 # annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_50), hjust = 1, vjust = 3,
 #                 label = paste("sd = ", round(sd(sample_estimates_50$sample_mean), 1)))
 
@@ -583,7 +583,7 @@ annotated_sampling_dist_100 <- sampling_distribution_100 +
     hjust = 1, 
     vjust = 1,
     label = paste("mean = ", round(mean(sample_estimates_100$sample_mean), 1))
-  ) #+
+  ) +  theme(text = element_text(size = 12), axis.title=element_text(size=12)) #+
 #    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_100), hjust = 1, vjust = 3,
 #               label = paste("sd = ", round(sd(sample_estimates_100$sample_mean), 1)))
 
@@ -595,7 +595,8 @@ annotated_sampling_dist_500 <- sampling_distribution_500 +
     hjust = 1, 
     vjust = 1,
     label = paste("mean = ", round(mean(sample_estimates_500$sample_mean), 1))
-  ) #+
+  ) +  theme(text = element_text(size = 12), axis.title=element_text(size=12)) 
+#+
 #    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_500), hjust = 1, vjust = 3,
 #               label = paste("sd = ", round(sd(sample_estimates_500$sample_mean), 1)))
 
