--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -327,7 +327,7 @@ simple linear regression model predictions for the Sacramento real estate data
 (predicting price from house size) and the "best" KNN regression model
 obtained from the same problem, shown in Figure \@ref(fig:08-compareRegression).
 
-```{r 08-compareRegression, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 4, fig.width = 10, fig.cap = "Comparison of simple linear regression and KNN regression."}
+```{r 08-compareRegression, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 4.75, fig.width = 10, fig.cap = "Comparison of simple linear regression and KNN regression."}
 set.seed(1234)
 sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 30) |>
   set_engine("kknn") |>
@@ -371,8 +371,10 @@ knn_plot_final <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
   geom_line(data = sacr_preds, aes(x = sqft, y = .pred), color = "blue") +
   ggtitle("KNN regression") +
   annotate("text", x = 3500, y = 100000, label = paste("RMSPE =", sacr_rmspe)) +
-  theme(text = element_text(size = 12))
+  theme(text = element_text(size = 18), axis.title=element_text(size=18)) 
 
+
+  
 lm_rmspe <- lm_test_results |>
   filter(.metric == "rmse") |>
   pull(.estimate) |>
@@ -381,7 +383,7 @@ lm_rmspe <- lm_test_results |>
 lm_plot_final <- lm_plot_final +
   annotate("text", x = 3500, y = 100000, label = paste("RMSPE =", lm_rmspe)) +
   ggtitle("linear regression") +
-  theme(text = element_text(size = 12))
+  theme(text = element_text(size = 18), axis.title=element_text(size=18)) 
 
 grid.arrange(lm_plot_final, knn_plot_final, ncol = 2)
 ```
