--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1238,7 +1238,8 @@ morley_hist_default <- ggplot(morley_rel,
        y = "# Measurements", 
        fill = "Experiment ID") +
   theme(legend.position = "none") +
-  ggtitle("Default bin width (bins = 30)")
+  ggtitle("Default (bins = 30)")  + 
+  theme(text = element_text(size = 14), axis.title=element_text(size=14)) 
 
 morley_hist_big <- ggplot(morley_rel, 
                           aes(x = relative_accuracy, 
@@ -1250,7 +1251,8 @@ morley_hist_big <- ggplot(morley_rel,
        y = "# Measurements", 
        fill = "Experiment ID") +
   theme(legend.position = "none") +
-  ggtitle( "binwidth = 0.1")
+  ggtitle( "binwidth = 0.1")  + 
+  theme(text = element_text(size = 14), axis.title=element_text(size=14)) 
 
 morley_hist_med <- ggplot(morley_rel, 
                           aes(x = relative_accuracy, 
@@ -1262,7 +1264,8 @@ morley_hist_med <- ggplot(morley_rel,
        y = "# Measurements", 
        fill = "Experiment ID") +
   theme(legend.position = "none") +
-  ggtitle("binwidth = 0.01")
+  ggtitle("binwidth = 0.01")  + 
+  theme(text = element_text(size = 14), axis.title=element_text(size=14)) 
 
 morley_hist_small <- ggplot(morley_rel, 
                             aes(x = relative_accuracy, 
@@ -1274,7 +1277,8 @@ morley_hist_small <- ggplot(morley_rel,
        y = "# Measurements", 
        fill = "Experiment ID") +
   theme(legend.position = "none") +
-  ggtitle("binwidth = 0.001")
+  ggtitle("binwidth = 0.001")  + 
+  theme(text = element_text(size = 14), axis.title=element_text(size=14)) 
 
 plot_grid(morley_hist_default, 
           morley_hist_small, 
@@ -1433,7 +1437,8 @@ library(svglite) # we need this to save SVG files
 faithful_plot <- ggplot(data = faithful, aes(x = waiting, y = eruptions)) +
   geom_point() +
   labs(x = "Waiting time to next eruption \n (minutes)",
-       y = "Eruption time \n (minutes)")
+       y = "Eruption time \n (minutes)") + 
+  theme(text = element_text(size = 12))
 
 faithful_plot
 ```
