--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -81,7 +81,7 @@ these are the values that the three variables take for the first entity in the
 data set. There are 13 entities in the data set in total, corresponding to the
 13 rows in Figure \@ref(fig:02-obs).
 
-``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A data frame storing data regarding the population of various regions in Canada. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "100%"}
+``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "A data frame storing data regarding the population of various regions in Canada. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "100%"}
 image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.004.jpeg") %>%
   image_crop("3632x700")
 ```
@@ -92,7 +92,7 @@ Internally, R stores the columns of a data frame as either
 `population`.  We will explain what lists and vectors are in the next two
 sections.
 
-``` {r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame with three vectors.", fig.retina = 2, out.width = "100%"}
+``` {r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Data frame with three vectors.", fig.retina = 2, out.width = "100%"}
 image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.005.jpeg") %>%
   image_crop("3632x700")
 ```
@@ -243,7 +243,7 @@ the following three criteria [@wickham2014tidy]:
 Figure \@ref(fig:02-tidy-image) demonstrates a tidy data set that satisfies these 
 three criteria. 
 
-``` {r 02-tidy-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Tidy data satisfies three criteria.", fig.retina = 2, out.width = "100%"}
+``` {r 02-tidy-image, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Tidy data satisfies three criteria.", fig.retina = 2, out.width = "80%"}
 image_read("img/tidy_data/tidy_data.001.jpeg") |>
   image_crop("3632x1400")
 ```
