changing x^3 expression in plot

--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -857,7 +857,7 @@ have been replaced by `z` values.
 ```{r 08-predictor-design-2, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.cap = "Relationship between the transformed predictor and the response."}
 curve_plt2 <- ggplot(df, aes(x = z, y = y)) +
   geom_point() +
-  xlab(paste0("z = ", expression(x^3))) +
+  xlab(expression(paste("z = x"^"3"))) +
   ylab("y") +
   geom_smooth(method = "lm", se = FALSE)
 
