fixing footnotes/adding refs in first two chaps

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -470,9 +470,8 @@ Excel files (`.xlsx`) | `read_excel` | `readxl`
 Another very common form of data storage is the relational database. Databases
 \index{database} are great when you have large data sets or multiple users
 working on a project. There are many relational database management systems,
-such as [SQLite](https://www.sqlite.org/index.html),
-[MySQL](https://www.mysql.com/), [PostgreSQL](https://www.postgresql.org/),
-[Oracle](https://www.oracle.com/ca-en/index.html), and many more. These
+such as SQLite, MySQL, PostgreSQL, Oracle,
+ and many more. These
 different relational database management systems each have their own advantages
 and limitations. Almost all employ SQL (*structured query language*) to obtain
 data from the database. But you don't need to know SQL to analyze data from
@@ -756,10 +755,11 @@ Databases are beneficial in a large-scale setting:
 - They enable storing large data sets across multiple computers with backups.
 - They provide mechanisms for ensuring data integrity and validating input.
 - They provide security and data access control.
-- They allow multiple users to access data simultaneously and remotely without conflicts and errors.
-  For example, [there are billions of Google searches conducted daily](https://www.internetlivestats.com/google-search-statistics/). 
-  Can you imagine if Google stored all of the data from those searches in a single `.csv` file!? 
-  Chaos would ensue! 
+- They allow multiple users to access data simultaneously 
+  and remotely without conflicts and errors.
+  For example, there are billions of Google searches conducted daily in 2021 [@googlesearches]. 
+  Can you imagine if Google stored all of the data 
+  from those searches in a single `.csv` file!? Chaos would ensue! 
 
 ## Writing data from R to a `.csv` file
 
@@ -821,9 +821,9 @@ content and tells the webpage how the HTML elements should
 be presented (e.g., colors, layouts, fonts etc.). 
 
 This subsection will show you the basics of both web scraping
-with the [`rvest` R package](https://github.com/hadley/rvest)
-and accessing the [Twitter](www.twitter.com) API
-using the [`rtweet` R package](https://github.com/ropensci/rtweet).
+with the [`rvest` R package](https://github.com/hadley/rvest) [@rvest]
+and accessing the Twitter API
+using the [`rtweet` R package](https://github.com/ropensci/rtweet) [@rtweet].
 
 ### Web scraping
 
@@ -837,8 +837,8 @@ into something you can see; so if we
 are going to create our own data by scraping a website, we have to first understand
 what that data looks like! For example, let's say we are interested
 in knowing the average rental price (per square foot) of the most recently
-available one-bedroom apartments in Vancouver from 
-https://vancouver.craigslist.org. When we visit the Vancouver Craigslist
+available one-bedroom apartments in Vancouver 
+on [Craiglist](https://vancouver.craigslist.org). When we visit the Vancouver Craigslist
 website \index{Craigslist} and search for one-bedroom apartments, 
 we should see something similar to Figure \@ref(fig:craigslist-human).
 
@@ -850,8 +850,8 @@ Based on what our browser shows us, it's pretty easy to find the size and price
 for each apartment listed. But we would like to be able to obtain that information
 using R, without any manual human effort or copying and pasting. We do this by
 examining the *source code* that the web server actually sent our browser to
-display for us. We show a snippet of it below (and link to the [entire source
-code here](img/website_source.txt)):
+display for us. We show a snippet of it below; the 
+[entire source code is available here](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/img/website_source.txt):
 
 ```html
         <span class="result-meta">
@@ -930,8 +930,9 @@ The above was a simple example of "finding the pattern to look for"; many
 websites are quite a bit larger and more complex, and so is their website
 source code. Fortunately, there are tools available to make this process
 easier. For example, 
-[SelectorGadget from the Chrome Web Store](https://chrome.google.com/webstore/detail/SelectorGadget/mhjhnkcfbdhnjickkkdbjoemdmbfginb) is 
-an open-source tool that simplifies identifying the generating and finding of CSS selectors. 
+[SelectorGadget](https://selectorgadget.com/) is 
+an open-source tool that simplifies identifying the generating 
+and finding of CSS selectors. 
 At the end of the chapter in the additional resources section, we include a link to
 a short video on how to install and use the SelectorGadget tool to 
 obtain CSS selectors for use in web scraping. 
@@ -1095,23 +1096,26 @@ of accessing data through an API in this book, with the hope that it gives you e
 idea that you can learn how to use another API if needed.
 
 In particular, in this book we will show you the basics of how to use
-the [rtweet](https://github.com/ropensci/rtweet) package in R
+the [rtweet](https://github.com/ropensci/rtweet) [@rtweet] package in R
 \index{API!rtweet}\index{rtweet}\index{Twitter} 
-to access data from the [Twitter](www.twitter.com) API. One nice feature of this particular 
+to access data from the Twitter API. One nice feature of this particular 
 API is that you don't need  a special *token* \index{API!token} to access it; you simply need to 
 make an account with them. Your access to the data will then be authenticated and controlled through
-your account username and password. If you have a Twitter account already (or are willing to make one), you can follow
+your account username and password. If you have a Twitter 
+account already (or are willing to make one), you can follow
 along with the examples that we show here. To get started, load the `rtweet` package:
 
 ```r
 library(rtweet)
 ```
 
-This package provides an extensive set of functions to search Twitter for tweets, users, their followers, and more. 
-Let's construct a small data set of the last 400 tweets and retweets from the [Tidyverse account]((https://twitter.com/tidyverse?lang=en)). A few of the most recent tweets
+This package provides an extensive set of functions to search 
+Twitter for tweets, users, their followers, and more. 
+Let's construct a small data set of the last 400 tweets and 
+retweets from the \@tidyverse account. A few of the most recent tweets
 are shown in Figure \@ref(fig:01-tidyverse-twitter).
 
-```{r 01-tidyverse-twitter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The Tidyverse Twitter feed.", fig.retina = 2, out.width="100%"}
+```{r 01-tidyverse-twitter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The \@tidyverse account Twitter feed.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/tidyverse_twitter.png")
 ```
 
@@ -1133,7 +1137,7 @@ we should abide by when using the API.
 **Using `rtweet`**
 
 After checking the Twitter website, it seems like asking for 400 tweets one time is acceptable.
-So we can use the `get_timelines` function to ask for the last 400 tweets from the Tidyverse account.
+So we can use the `get_timelines` function to ask for the last 400 tweets from the \@tidyverse account.
 
 ```r
 tidyverse_tweets <- get_timelines('tidyverse', n=400)
@@ -1192,7 +1196,7 @@ tidyverse_tweets <- select(tidyverse_tweets,
 tidyverse_tweets
 ```
 
-If you look back up at the image of the Tidyverse Twitter page, you will
+If you look back up at the image of the \@tidyverse Twitter page, you will
 recognize the text of the most recent few tweets in the above data frame.  In
 other words, we have successfully created a small data set using the Twitter
 API&mdash;neat! This data is also quite different from what we obtained from web scraping;
@@ -1205,7 +1209,7 @@ and after reading the next few chapters you will have the skills to
 compute the percentage of retweets versus tweets, find the most oft-retweeted
 account, make visualizations of the data, and much more! If you decide that you want 
 to ask the Twitter API for more data 
-(see [the `rtweet` page](https://github.com/ropensci/rtweet)
+(see [the `rtweet` package](https://github.com/ropensci/rtweet) [@rtweet]
 for more examples of what is possible), just be mindful as usual about how much
 data you are requesting and how frequently you are making requests. 
 
