--- a/references.bib
+++ b/references.bib
@@ -14,6 +14,12 @@
   url = {https://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm}
 }
 
+@misc{googlesearches,
+	author = {{Real Time Statistics Project}},
+	title = {Internet Live Stats: Google Search Statistics},
+    year = {2021},
+    url = {https://www.internetlivestats.com/google-search-statistics/}}
+
 @misc{language2016,
   author = {{Statistics Canada}},
   title = {The {A}boriginal languages of {F}irst {N}ations people, {M}\'etis and {I}nuit},
@@ -75,6 +81,20 @@
   note = {R package version 0.0.9},
   url = {https://ttimbers.github.io/canlang/},
 }
+
+@Manual{rvest,
+  title = {{rvest}},
+  author = {{rvest Authors}},
+  year = {2021},
+  note = {R package version 1.0.2},
+  url = {https://github.com/tidyverse/rvest}}
+
+@Manual{rtweet,
+  title = {{rtweet}},
+  author = {Michael Kearney},
+  year = {2019},
+  note = {R package version 0.7.0},
+  url = {https://github.com/ropensci/rtweet}}
 
 @article{wickham2019tidverse,
     title = {Welcome to the {tidyverse}},
