--- a/intro.Rmd
+++ b/intro.Rmd
@@ -42,13 +42,16 @@ individual learns in childhood) in Canadian residential schools. Colonizers
 also renamed places they had "discovered" [@wilson2018].  Acts such as these
 have significantly harmed the continuity of Indigenous languages in Canada, and
 some languages are considered "endangered" as few people report speaking them. 
-To learn more, please see *Canadian Geographic*'s article, ["Mapping Indigenous Languages in Canada"](https://www.canadiangeographic.ca/article/mapping-indigenous-languages-canada)
-[@walker2017], [*They Came for the Children: Canada, Aboriginal peoples, and Residential Schools*](http://publications.gc.ca/site/archivee-archived.html?url=http://publications.gc.ca/collections/collection_2012/cvrc-trcc/IR4-4-2012-eng.pdf) [@children2012] 
-and the *Truth and Reconciliation Commission of 
-Canada's* [*Calls to Action*](http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf) [@calls2015].
+To learn more, please see *Canadian Geographic*'s article, "Mapping Indigenous Languages in 
+Canada" [@walker2017], 
+*They Came for the Children: Canada, Aboriginal 
+peoples, and Residential Schools* [@children2012] 
+and the *Truth and Reconciliation Commission of Canada's* 
+*Calls to Action* [@calls2015].
 
 The data set we will study in this chapter is taken from 
-[the {canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has
+[the `canlang` R data package](https://ttimbers.github.io/canlang/) 
+[@timbers2020canlang], which has
 population language data collected during the 2016 Canadian census [@cancensus2016]. 
 In this data, there are 214 languages recorded, each having six different properties:
 
@@ -180,7 +183,7 @@ frame is the *comma-separated values* format (`.csv` for short)\index{comma-sepa
 have names ending in `.csv`, and can be opened and saved using common
 spreadsheet programs like Microsoft Excel and Google Sheets.  For example, the
 `.csv` file named `can_lang.csv` 
-[is included with the code for this book](https://raw.githubusercontent.com/UBC-DSCI/introduction-to-datascience/master/data/can_lang.csv).
+is included with [the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/tree/master/data).
 If we were to open this data in a plain text editor (a program like Notepad that just shows
 text with no formatting), we would see each row on its own line, and each entry in the table separated by a comma:
 
@@ -325,16 +328,17 @@ na + me <- 1
 Error: unexpected assignment in "na+me <-"
 ```
 
-There are certain conventions for naming objects in R. When naming \index{object!naming convention} an object we
+There are certain conventions for naming objects in R. 
+When naming \index{object!naming convention} an object we
 suggest using only lowercase letters, numbers and underscores `_` to separate
 the words in a name.  R is case sensitive, which means that `Letter` and
 `letter` would be two different objects in R.  You should also try to give your
 objects meaningful names.  For instance, you *can* name a data frame `x`.
 However, using more meaningful terms, such as `language_data`, will help you
 remember what each name in your code represents.  We recommend following the
-Tidyverse naming conventions outlined in the [*Tidyverse Style
-Guide*](https://principles.tidyverse.org/names-attribute.html#universal-names)
-[@tidyversestyleguide].  Let's now use the assignment symbol to give the name
+Tidyverse naming conventions outlined in  
+the *Tidyverse Style Guide* [@tidyversestyleguide].  Let's 
+now use the assignment symbol to give the name
 `can_lang` to the 2016 Canadian census language data frame that we get from
 `read_csv`. 
 
