--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,9 @@
+@inproceedings{streetbreastcancer,
+  title = {Nuclear feature extraction for breast tumor diagnosis},
+  year = {1993},
+  author = {William Nick Street and William Wolberg and Olvi Mangasarian},
+  booktitle = {International Symposium on Electronic Imaging: Science and Technology}}
+
 @article{wilson2014best,
   title={Good enough practices in scientific computing},
   author={Wilson, Greg and Bryan, Jennifer and Cranston, Karen and Kitzes, Justin and Nederbragt, Lex and Teal, Tracy},
@@ -106,6 +112,14 @@
     pages = {1686}
   }
 
+@book{wilkeviz,
+	title = {Fundamentals of Data Visualization},
+	author = {Claus Wilke},
+	year = {2019},
+	publisher = {O'Reilly Media},
+    url = {https://clauswilke.com/dataviz/}
+}
+
 @Manual{Rlanguage,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
@@ -120,6 +134,14 @@
   title = {The Tidyverse Style Guide},
   url = {https://style.tidyverse.org/}
 }
+
+@Manual{ggthemes,
+  year = {2019},
+  title = {{ggthemes}},
+  author = {Jeffrey Arnold},
+  note = {R package version 4.2.0},
+  url = {https://github.com/jrnold/ggthemes/}
+ }
 
 @misc{statcan2018mothertongue,
   author = {{Statistics Canada}},
