--- a/viz.Rmd
+++ b/viz.Rmd
@@ -59,8 +59,7 @@ Imagine your visualization as part of a poster presentation for a project; even
 if you aren't standing at the poster explaining things, an effective
 visualization will convey your message to the audience.
 
-Recall 
-[the different data analysis questions](index.html#chapter-learning-objectives) 
+Recall the different data analysis questions 
 from Chapter \@ref(intro). 
 With the visualizations we will cover in this chapter, 
 we will be able to answer *only descriptive and exploratory* questions. 
@@ -70,10 +69,9 @@ as we have not learned the tools necessary to do that properly just yet.
 
 As with most coding tasks, it is totally fine (and quite common) to make
 mistakes and iterate a few times before you find the right visualization for
-your data and question. There are [many different kinds of plotting
-graphics](https://serialmentor.com/dataviz/directory-of-visualizations.html)
-available to use. The types of plot that we introduce in this book 
-are shown in Figure \@ref(fig:plot-sketches);
+your data and question. There are many different kinds of plotting
+graphics available to use (see Chapter 5 of *Fundamentals of Data Visualization* [@wilkeviz] for a directory). 
+The types of plot that we introduce in this book are shown in Figure \@ref(fig:plot-sketches);
 which one you should select depends on your data 
 and the question you want to answer. 
 In general, the guiding principles of when to use each type of plot 
@@ -164,8 +162,8 @@ understand and remember your message quickly.
 - Ensure the data are clearly visible; don't hide the shape/distribution of the data behind other objects (e.g.,  a bar).
 - Make sure to use color schemes that are understandable by those with
   colorblindness (a surprisingly large fraction of the overall population).
-  For example, [colorbrewer.org](https://colorbrewer2.org) and the `RColorBrewer`
-  R package provide the ability to pick such color schemes, and you can check
+  For example, [colorbrewer.org](https://colorbrewer2.org) and the `RColorBrewer` 
+  R package [@RColorBrewer]  provide the ability to pick such color schemes, and you can check
   your visualizations after you have created them by uploading to online tools
   such as the [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/).
 - Redundancy can be helpful; sometimes conveying the same message in multiple ways reinforces it for the audience.
@@ -199,8 +197,8 @@ options(warn = -1)
 ### Scatter plots and line plots: the Mauna Loa CO$_{\text{2}}$ data set
 
 The [Mauna Loa CO$_{\text{2}}$ data set](https://www.esrl.noaa.gov/gmd/ccgg/trends/data.html), 
-curated by [Dr. Pieter Tans, NOAA/GML](https://www.esrl.noaa.gov/gmd/staff/Pieter.Tans/) 
-and [Dr. Ralph Keeling, Scripps Institution of Oceanography,](https://scrippsco2.ucsd.edu/)
+curated by Dr. Pieter Tans, NOAA/GML 
+and Dr. Ralph Keeling, Scripps Institution of Oceanography,
 records the atmospheric concentration of carbon dioxide 
 (CO$_{\text{2}}$, in parts per million) 
 at the Mauna Loa research station in \index{Mauna Loa} Hawaii 
@@ -743,9 +741,10 @@ ggplot(can_lang, aes(x = most_at_home_percent,
 
 In Figure \@ref(fig:03-scatter-color-by-category-legend-edit), the points are colored with
 the default `ggplot2` color palette. But what if you want to use different
-colors? In R, one package that provides alternative color 
-palettes \index{color palette} is `RColorBrewer` [@RColorBrewer]. You can 
-visualize the list of color
+colors? In R, two packages that provide alternative color 
+palettes \index{color palette} are `RColorBrewer` [@RColorBrewer]
+and `ggthemes` [@ggthemes]; in this book we will cover how to use `RColorBrewer`.
+You can visualize the list of color
 palettes that `RColorBrewer` has to offer with the `display.brewer.all`
 function. You can also print a list of color-blind friendly palettes by adding
 `colorblindFriendly = TRUE` to the function. 
@@ -765,7 +764,6 @@ You can use
 this [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/) to check 
 if your visualizations \index{color palette!color blindness simulator} 
 are color-blind friendly.
-Additionally, the `ggthemes` R package also has a [color-blind friendly color palette](https://jrnold.github.io/ggthemes/reference/colorblind.html).
 Below we pick the `"Set2"` palette, with the result shown
 in Figure \@ref(fig:scatter-color-by-category-palette).
 We also set the `shape` aesthetic mapping to the `category` variable as well;
@@ -1518,7 +1516,7 @@ found in Chapter \@ref(move-to-your-own-machine).
 
 ## Additional resources
 - The [`ggplot2` page on the Tidyverse website](https://ggplot2.tidyverse.org) is where you should look if you want to learn more about the functions in this chapter, the full set of arguments you can use, and other related functions. The site also provides a very nice cheat sheet that summarizes many of the data wrangling functions from this chapter.
-- The [Fundamentals of Data Visualization](https://serialmentor.com/dataviz/) has a wealth of information on designing effective visualizations. It is not specific to any particular programming language or library. If you want to improve your visualization skills, this is the next place to look.
+- The [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/) has a wealth of information on designing effective visualizations. It is not specific to any particular programming language or library. If you want to improve your visualization skills, this is the next place to look.
 - [*R for Data Science*](https://r4ds.had.co.nz/) has a chapter on [creating visualizations using `ggplot2`](https://r4ds.had.co.nz/data-visualisation.html). This reference is specific to R and `ggplot2`, but provides a much more detailed introduction to the full set of tools that `ggplot2` provides. This chapter is where you should look if you want to learn how to make more intricate visualizations in `ggplot2` than what is included in this chapter.
 - The [`theme` function documentation](https://ggplot2.tidyverse.org/reference/theme.html)
 is an excellent reference to see how you can fine tune the non-data aspects 
