--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -100,8 +100,8 @@ categories (e.g., a diagnosis of healthy, bronchitis, pneumonia, or a common col
 
 In this chapter and the next, we will study a data set of 
 [digitized breast cancer image features](http://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+%28Diagnostic%29),
-created by Dr. William H. Wolberg, W. Nick Street, and Olvi L. Mangasarian at
-the University of Wisconsin, Madison. \index{breast cancer} Each row in the data set represents an
+created by Dr. William H. Wolberg, W. Nick Street, and Olvi L. Mangasarian [@streetbreastcancer]. \index{breast cancer} 
+Each row in the data set represents an
 image of a tumor sample, including the diagnosis (benign or malignant) and
 several other measurements (nucleus texture, perimeter, area, and more).
 Diagnosis for each image was conducted by physicians. 
