--- a/intro.Rmd
+++ b/intro.Rmd
@@ -219,7 +219,8 @@ use when you install R. Therefore, you need to load it from somewhere else
 before you can use it. The place from which we will load it is called an R *package*. 
 An R package \index{package} is a collection of functions that can be used in addition to the
 built-in R package functions once loaded. The `read_csv` function, in
-particular, can be made accessible by loading the `tidyverse` package [@wickham2019tidverse]
+particular, can be made accessible by loading 
+[the `tidyverse` R package](https://github.com/tidyverse/tidyverse) [@wickham2019tidverse]
 using the `library` function. \index{library} The `tidyverse` \index{tidyverse} package contains many
 functions that we will use throughout this book to load, clean, wrangle, 
 and visualize data. 
