rtweet and rvest title change in bib

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -851,7 +851,8 @@ for each apartment listed. But we would like to be able to obtain that informati
 using R, without any manual human effort or copying and pasting. We do this by
 examining the *source code* that the web server actually sent our browser to
 display for us. We show a snippet of it below; the 
-[entire source code is available here](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/img/website_source.txt):
+entire source 
+is [included with the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/img/website_source.txt):
 
 ```html
         <span class="result-meta">
@@ -1096,7 +1097,7 @@ of accessing data through an API in this book, with the hope that it gives you e
 idea that you can learn how to use another API if needed.
 
 In particular, in this book we will show you the basics of how to use
-the [rtweet](https://github.com/ropensci/rtweet) [@rtweet] package in R
+the `rtweet` package in R
 \index{API!rtweet}\index{rtweet}\index{Twitter} 
 to access data from the Twitter API. One nice feature of this particular 
 API is that you don't need  a special *token* \index{API!token} to access it; you simply need to 
@@ -1115,7 +1116,7 @@ Let's construct a small data set of the last 400 tweets and
 retweets from the \@tidyverse account. A few of the most recent tweets
 are shown in Figure \@ref(fig:01-tidyverse-twitter).
 
-```{r 01-tidyverse-twitter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The \@tidyverse account Twitter feed.", fig.retina = 2, out.width="100%"}
+```{r 01-tidyverse-twitter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The tidyverse account Twitter feed.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/tidyverse_twitter.png")
 ```
 
@@ -1209,7 +1210,7 @@ and after reading the next few chapters you will have the skills to
 compute the percentage of retweets versus tweets, find the most oft-retweeted
 account, make visualizations of the data, and much more! If you decide that you want 
 to ask the Twitter API for more data 
-(see [the `rtweet` package](https://github.com/ropensci/rtweet) [@rtweet]
+(see [the `rtweet` page](https://github.com/ropensci/rtweet)
 for more examples of what is possible), just be mindful as usual about how much
 data you are requesting and how frequently you are making requests. 
 
