--- a/references.bib
+++ b/references.bib
@@ -89,14 +89,14 @@
 }
 
 @Manual{rvest,
-  title = {{rvest}},
+  title = {{rvest R package}},
   author = {{rvest Authors}},
   year = {2021},
   note = {R package version 1.0.2},
   url = {https://github.com/tidyverse/rvest}}
 
 @Manual{rtweet,
-  title = {{rtweet}},
+  title = {{rtweet R package}},
   author = {Michael Kearney},
   year = {2019},
   note = {R package version 0.7.0},
