changed urls of R packages to be most useful, not github

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -689,9 +689,8 @@ In order to classify a new observation using a $K$-nearest neighbor classifier, 
 Coding the $K$-nearest neighbors algorithm in R ourselves can get complicated,
 especially if we want to handle multiple classes, more than two variables,
 or predict the class for multiple new observations. Thankfully, in R,
-the $K$-nearest neighbors algorithm is implemented in the `parsnip` package 
-included in the 
-[`tidymodels` package](https://www.tidymodels.org/), along with 
+the $K$-nearest neighbors algorithm is implemented in [the `parsnip` R package](https://github.com/tidymodels/parsnip) [@parsnip] 
+included in `tidymodels`, along with 
 many [other models](https://www.tidymodels.org/find/parsnip/) \index{tidymodels}\index{parsnip}
  that you will encounter in this and future chapters of the book. The `tidymodels` collection
 provides tools to help make and use models, such as classifiers.  Using the packages
