--- a/references.bib
+++ b/references.bib
@@ -88,18 +88,22 @@
   url = {https://ttimbers.github.io/canlang/},
 }
 
+@Manual{parsnip,
+  title = {{parsnip R package}},
+  author = {Max Kuhn and David Vaughan},
+  year = {2021},
+  url = {https://parsnip.tidymodels.org/}}
+
 @Manual{rvest,
   title = {{rvest R package}},
-  author = {{rvest Authors}},
+  author = {Hadley Wickham},
   year = {2021},
-  note = {R package version 1.0.2},
-  url = {https://github.com/tidyverse/rvest}}
+  url = {https://rvest.tidyverse.org/}}
 
 @Manual{rtweet,
   title = {{rtweet R package}},
   author = {Michael Kearney},
   year = {2019},
-  note = {R package version 0.7.0},
   url = {https://github.com/ropensci/rtweet}}
 
 @article{wickham2019tidverse,
@@ -139,8 +143,7 @@
   year = {2019},
   title = {{ggthemes}},
   author = {Jeffrey Arnold},
-  note = {R package version 4.2.0},
-  url = {https://github.com/jrnold/ggthemes/}
+  url = {https://jrnold.github.io/ggthemes/}
  }
 
 @misc{statcan2018mothertongue,
@@ -232,7 +235,7 @@
     title = {{RColorBrewer}: ColorBrewer Palettes},
     author = {Erich Neuwirth},
     year = {2014},
-    note = {R package version 1.1-2},
+    url = {https://cran.r-project.org/web/packages/RColorBrewer/index.html}
   }
 
 @misc{insideairbnb,
