better tidyverse cite

--- a/references.bib
+++ b/references.bib
@@ -116,6 +116,12 @@
     pages = {1686}
   }
 
+@Manual{tidyverse,
+  title = {{tidyverse R package}},
+  author = {Hadley Wickham},
+  year = {2021},
+  url = {https://tidyverse.tidyverse.org/}}
+
 @book{wilkeviz,
 	title = {Fundamentals of Data Visualization},
 	author = {Claus Wilke},
