more reference URL fixes

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -821,7 +821,7 @@ content and tells the webpage how the HTML elements should
 be presented (e.g., colors, layouts, fonts etc.). 
 
 This subsection will show you the basics of both web scraping
-with the [`rvest` R package](https://github.com/hadley/rvest) [@rvest]
+with the [`rvest` R package](https://rvest.tidyverse.org/) [@rvest]
 and accessing the Twitter API
 using the [`rtweet` R package](https://github.com/ropensci/rtweet) [@rtweet].
 
