--- a/viz.Rmd
+++ b/viz.Rmd
@@ -162,8 +162,9 @@ understand and remember your message quickly.
 - Ensure the data are clearly visible; don't hide the shape/distribution of the data behind other objects (e.g.,  a bar).
 - Make sure to use color schemes that are understandable by those with
   colorblindness (a surprisingly large fraction of the overall population).
-  For example, [colorbrewer.org](https://colorbrewer2.org) and the `RColorBrewer` 
-  R package [@RColorBrewer]  provide the ability to pick such color schemes, and you can check
+  For example, [ColorBrewer](https://colorbrewer2.org) 
+  and [the `RColorBrewer` R package](https://cran.r-project.org/web/packages/RColorBrewer/index.html) [@RColorBrewer]  
+  provide the ability to pick such color schemes, and you can check
   your visualizations after you have created them by uploading to online tools
   such as the [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/).
 - Redundancy can be helpful; sometimes conveying the same message in multiple ways reinforces it for the audience.
