--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -122,7 +122,7 @@ year
 > depending on context. Very confusing indeed! So to keep things simple, in 
 > this book we *always* use the term "vector" to refer to "atomic vector." 
 > We encourage readers who are enthusiastic to learn more to read the
-> Vectors chapter of Advanced R [@wickham2019advanced].
+> Vectors chapter of *Advanced R* [@wickham2019advanced].
 
 ``` {r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example of a vector whose type is character.", fig.retina = 2, out.width = "100%"}
 image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.007.jpeg") %>%
