adding urls for books with free online versions

--- a/references.bib
+++ b/references.bib
@@ -47,7 +47,8 @@
   title={The Art of Data Science: A Guide for Anyone Who Works with Data},
   author={Peng, Roger D and Matsui, Elizabeth},
   publisher={Skybrude Consulting, LLC},
-  year={2015}
+  year={2015},
+  url = {https://bookdown.org/rdpeng/artofdatascience/}
 }
 
 @article{matthews2008configuration,
@@ -273,12 +274,14 @@
   title={R for Data Science: Import, Tidy, Transform, Visualize, and Model Data},
   author={Wickham, Hadley and Grolemund, Garrett},
   year={2016},
-  publisher={O'Reilly}
+  publisher={O'Reilly},
+  url = {https://r4ds.had.co.nz/}
 }
 
 @book{wickham2019advanced,
   title={Advanced {R}},
   author={Wickham, Hadley},
   year={2019},
-  publisher={CRC Press}
+  publisher={CRC Press},
+  url = {https://adv-r.hadley.nz/}
 }
