added refs for best subset and forward sel

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,41 @@
+@inproceedings{forwardefroymson,
+  author = {M. Eforymson},
+  title = {Stepwise regression---a backward and forward look},
+  year = {1966},
+  booktitle = {Eastern Regional Meetings of the Institute of Mathematical Statistics}}
+
+@book{forwarddraper,
+  author = {Norman Draper and Harry Smith},
+  year = {1966},
+  title = {Applied Regression Analysis},
+  publisher = {Wiley}}
+
+@article{bealesubset,
+  title = {The discarding of variables in multivariate analysis},
+  year = {1967},
+  author = {Evelyn Martin Lansdowne Beale and Maurice George Kendall and David Mann},
+  journal = {Biometrika},
+  volume = {54},
+  number = {3-4},
+  pages = {357--366}}
+ 
+@article{hockingsubset,
+  title = {Selection of the best subset in regression analysis},
+  author = {Ronald Hocking and R. N. Leslie},
+  year = {1967},
+  journal = {Technometrics},
+  volume = {9},
+  number = {4},
+  pages = {531--540}}
+
+@article{deebblind,
+  title = {The molecular basis of variation in human color vision},
+  author = {Sameer Deeb},
+  year = {2005},
+  journal = {Clinical Genetics},
+  volume = {67},
+  pages = {369--377}}
+
 @inproceedings{streetbreastcancer,
   title = {Nuclear feature extraction for breast tumor diagnosis},
   year = {1993},
@@ -94,6 +132,12 @@
   author = {Max Kuhn and David Vaughan},
   year = {2021},
   url = {https://parsnip.tidymodels.org/}}
+
+@Manual{recipes,
+  title = {{recipes R package}},
+  author = {Max Kuhn and Hadley Wickham},
+  year = {2021},
+  url = {https://recipes.tidymodels.org/}}
 
 @Manual{rvest,
   title = {{rvest R package}},
