added cites for forward sel and best subset; improved urls

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -117,7 +117,7 @@ the diagnosing physician is. Furthermore, benign tumors are not normally
 dangerous; the cells stay in the same place, and the tumor stops growing before
 it gets very large. By contrast, in malignant tumors, the cells invade the
 surrounding tissue and spread into nearby organs, where they can cause serious
-damage (@stanfordhealthcare).
+damage [@stanfordhealthcare].
 Thus, it is important to quickly and accurately diagnose the tumor type to
 guide patient treatment.
 
@@ -689,7 +689,8 @@ In order to classify a new observation using a $K$-nearest neighbor classifier, 
 Coding the $K$-nearest neighbors algorithm in R ourselves can get complicated,
 especially if we want to handle multiple classes, more than two variables,
 or predict the class for multiple new observations. Thankfully, in R,
-the $K$-nearest neighbors algorithm is implemented in [the `parsnip` R package](https://github.com/tidymodels/parsnip) [@parsnip] 
+the $K$-nearest neighbors algorithm is 
+implemented in [the `parsnip` R package](https://parsnip.tidymodels.org/) [@parsnip] 
 included in `tidymodels`, along with 
 many [other models](https://www.tidymodels.org/find/parsnip/) \index{tidymodels}\index{parsnip}
  that you will encounter in this and future chapters of the book. The `tidymodels` collection
@@ -722,7 +723,7 @@ distance (`weight_func = "rectangular"`). The `weight_func` argument controls
 how neighbors vote when classifying a new observation; by setting it to `"rectangular"`,
 each of the $K$ nearest neighbors gets exactly 1 vote as described above. Other choices, 
 which weigh each neighbor's vote differently, can be found on 
-[the `tidymodels` website](https://parsnip.tidymodels.org/reference/nearest_neighbor.html).
+[the `parsnip` website](https://parsnip.tidymodels.org/reference/nearest_neighbor.html).
 In the `set_engine` \index{tidymodels!engine} argument, we specify which package or system will be used for training
 the model. Here `kknn` is the R package we will use for performing $K$-nearest neighbors classification.
 Finally, we specify that this is a classification problem with the `set_mode` function.
@@ -845,8 +846,9 @@ loaded, and the standardized version of that same data. But first, we need to
 standardize the `unscaled_cancer` data set with `tidymodels`.
 
 In the `tidymodels` framework, all data preprocessing happens 
-using a [`recipe`](https://tidymodels.github.io/recipes/reference/index.html).
-Here we will initialize a recipe \index{recipe} \index{tidymodels!recipe|see{recipe}} for the `unscaled_cancer` data above, specifying
+using a `recipe` from [the `recipes` R package](https://recipes.tidymodels.org/) [@recipes]
+Here we will initialize a recipe \index{recipe} \index{tidymodels!recipe|see{recipe}} for 
+the `unscaled_cancer` data above, specifying
 that the `Class` variable is the target, and all other variables are predictors:
 
 ```{r 05-scaling-2}
@@ -855,7 +857,9 @@ print(uc_recipe)
 ```
 
 So far, there is not much in the recipe; just a statement about the number of targets
-and predictors. Let's add scaling (`step_scale`) \index{recipe!step\_scale} and centering (`step_center`) \index{recipe!step\_center} steps for 
+and predictors. Let's add 
+scaling (`step_scale`) \index{recipe!step\_scale} and 
+centering (`step_center`) \index{recipe!step\_center} steps for 
 all of the predictors so that they each have a mean of 0 and standard deviation of 1.
 Note that `tidyverse` actually provides `step_normalize`, which does both centering and scaling in
 a single recipe step; in this book we will keep `step_scale` and `step_center` separate
@@ -884,8 +888,8 @@ For example:
 - `Area, Smoothness`: specify both the `Area` and `Smoothness` variable
 - `-Class`: specify everything except the `Class` variable
 
-You can find [a full set of all the steps and variable selection functions](https://tidymodels.github.io/recipes/reference/index.html)
-on the `recipes` home page.
+You can find a full set of all the steps and variable selection functions
+on the [`recipes` reference page](https://recipes.tidymodels.org/reference/index.html).
 
 At this point, we have calculated the required statistics based on the data input into the 
 recipe, but the data are not yet scaled and centered. To actually scale and center 
