--- a/viz.Rmd
+++ b/viz.Rmd
@@ -161,12 +161,13 @@ understand and remember your message quickly.
 - Ensure the text, symbols, lines, etc., on your visualization are big enough to be easily read.
 - Ensure the data are clearly visible; don't hide the shape/distribution of the data behind other objects (e.g.,  a bar).
 - Make sure to use color schemes that are understandable by those with
-  colorblindness (a surprisingly large fraction of the overall population).
+  colorblindness (a surprisingly large fraction of the overall 
+  population&mdash;from about 1% to 10%, depending on sex and ancestry [@deebblind]).
   For example, [ColorBrewer](https://colorbrewer2.org) 
   and [the `RColorBrewer` R package](https://cran.r-project.org/web/packages/RColorBrewer/index.html) [@RColorBrewer]  
   provide the ability to pick such color schemes, and you can check
   your visualizations after you have created them by uploading to online tools
-  such as the [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/).
+  such as a [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/).
 - Redundancy can be helpful; sometimes conveying the same message in multiple ways reinforces it for the audience.
 
 **Minimize noise**
