--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -104,9 +104,10 @@ is that we are now predicting numerical variables instead of categorical variabl
 
 ## Exploring a data set
 
-In this chapter and the next, we will study the Sacramento \index{Sacramento real estate} real estate data
-set. This data set contains 932 real estate transactions in Sacramento,
-California, [originally reported in the *Sacramento Bee* newspaper](https://support.spatialkey.com/spatialkey-sample-csv-data/).
+In this chapter and the next, we will study 
+a data set \index{Sacramento real estate} of 
+[932 real estate transactions in Sacramento, California](https://support.spatialkey.com/spatialkey-sample-csv-data/) 
+originally reported in the *Sacramento Bee* newspaper.
 We first need to formulate a precise question that
 we want to answer. In this example, our question is again predictive:
 \index{question!regression} Can we use the size of a house in the Sacramento, CA area to predict
