added url for islr

--- a/references.bib
+++ b/references.bib
@@ -115,7 +115,8 @@
   author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
   edition={1st},
   year={2013},
-  publisher={Springer}
+  publisher={Springer},
+  url = {https://www.statlearning.com/}
 }
 
 
