fixed palmer citations

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -103,11 +103,11 @@ for where to begin learning more about these other methods.
 
 **An illustrative example** 
 
-Here we will present an illustrative example using a data set \index{Palmer penguins} from the
-[{palmerpenguins} R data package](https://allisonhorst.github.io/palmerpenguins/). This data set was
-collected by [Dr. Kristen Gorman](https://www.uaf.edu/cfos/people/faculty/detail/kristen-gorman.php) and
-the [Palmer Station, Antarctica Long Term Ecological Research Site](https://pal.lternet.edu/), and includes
-measurements for adult penguins found near there [@palmerpenguins]. We have
+Here we will present an illustrative example using a data set \index{Palmer penguins} from
+[the `palmerpenguins` R package](https://allisonhorst.github.io/palmerpenguins/) [@palmerpenguins]. This 
+data set was collected by Dr. Kristen Gorman and
+the Palmer Station, Antarctica Long Term Ecological Research Site, and includes
+measurements for adult penguins found near there [@penguinpaper]. We have
 modified the data set for use in this chapter. Here we will focus on using two
 variables&mdash;penguin bill and flipper length, both in millimeters&mdash;to determine whether 
 there are distinct types of penguins in our data.
