--- a/references.bib
+++ b/references.bib
@@ -4,6 +4,14 @@
   year = {1966},
   booktitle = {Eastern Regional Meetings of the Institute of Mathematical Statistics}}
 
+@article{penguinpaper,
+  title = {Ecological sexual dimorphism and environmental variability within a community of {A}ntarctic penguins (genus \emph{Pygoscelis})},
+  year = {2014},
+  author = {Kristen Gorman and Tony Williams and William Fraser},
+  journal = {PLoS ONE},
+  volume = {9},
+  number = {3}}
+
 @book{forwarddraper,
   author = {Norman Draper and Harry Smith},
   year = {1966},
